fix: refine team access levels and security permissions
- Update SecurityConfig to allow MEMBER and VIEWER roles GET access to /api/teams
- Restrict POST/PUT/DELETE methods on team routes to ADMIN and MANAGER only
- Fix TeamService logic to include both managed and joined teams for the MANAGER role
- Resolve issue where Managers could not see teams they were assigned to by Admins